# codex

./: package-lock.json
.github/actions/codex/: package.json
codex-rs/: TRACE_STRUCTURE.md  config.md
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: proto.rs
codex-rs/common/: Cargo.toml
codex-rs/common/src/: lib.rs  telemetry.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: chat_completions.rs  client.rs  client_common.rs  codex.rs  config.rs  conversation_history.rs  git_info.rs  lib.rs  mcp_tool_call.rs  models.rs  protocol.rs  rollout.rs  telemetry.rs
codex-rs/core/tests/: cli_stream.rs  live_agent.rs  previous_response_id.rs  stream_no_completed.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: cli.rs  event_processor.rs  lib.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs  exec_approval.rs  patch_approval.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  chatwidget.rs  lib.rs  user_approval_widget.rs
